# aw-watcher-custom

./: .gitignore  flake.nix  pyproject.toml
aw_watcher_custom/: __main__.py  config.py  watcher.py
