[tool.poetry]
name = "aw-watcher-custom"
version = "0.1.0"
description = "My custom window watcher (for use with ActivityWatch)."
authors = ["David Li <davidtianli@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
aw-watcher-custom = "aw_watcher_custom:main"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
aw-client = "^0.5"
psutil = "^5.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"